--- a/view/adminPanel/admin/timing.html
+++ b/view/adminPanel/admin/timing.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" type="image" href="../../../img/favicon.png" />
+    <link rel="shortcut icon" type="image" href="/img/favicon.png" />
     <link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css" rel="stylesheet"
         type="text/css" />
-    <link rel="stylesheet" href="../../../css/main.css">
-    <link rel="stylesheet" href="../../../css/adminPanel/layout.css">
-    <link rel="stylesheet" href="../../../css/adminPanel/admin/timing.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/adminPanel/layout.css">
+    <link rel="stylesheet" href="/css/adminPanel/admin/timing.css">
     <title>زمانبندی پرواز ها | پنل مدیریت</title>
 </head>
 
 <body>
     <!-- Header -->
-    <header w3-include-html="../layout/header.html"></header>
+    <header w3-include-html="/view/adminPanel/layout/header.html"></header>
     <div class="content">
         <!-- aside -->
-        <aside w3-include-html="../layout/asideAdmin.html" class="sidebar -bg-dark"></aside>
+        <aside w3-include-html="/view/adminPanel/layout/asideAdmin.html" class="sidebar -bg-dark"></aside>
 
         <!-- main -->
         <main>
@@ -32,7 +32,8 @@
                         <tbody>
                             <tr>
                                 <th>شماره پرواز</th>
-                                <th title="برای مشاهده جزئیات بیشتر، روی نام هواپیما کلیک کنید.">هواپیما <i class="far fa-info-circle fa-fw fa-beat-fade"></i></th>
+                                <th title="برای مشاهده جزئیات بیشتر، روی نام هواپیما کلیک کنید.">هواپیما <i
+                                        class="far fa-info-circle fa-fw fa-beat-fade"></i></th>
                                 <th>تاریخ پرواز</th>
                                 <th>مبدا</th>
                                 <th>مقصد</th>
@@ -68,7 +69,9 @@
                             </tr>
                             <tr>
                                 <td>778</td>
-                                <td><a title="برای مشاهده جزئیات بیشتر کلیک کنید." href="http://127.0.0.1:5500/view/adminPanel/admin/iranair-tehran-birjand.html">ایران ایر</a></td>
+                                <td><a title="برای مشاهده جزئیات بیشتر کلیک کنید."
+                                        href="http://127.0.0.1:5500/view/adminPanel/admin/iranair-tehran-birjand.html">ایران
+                                        ایر</a></td>
                                 <td>1401/11/28</td>
                                 <td>تهران</td>
                                 <td>بیرجند</td>
@@ -82,8 +85,8 @@
         </main>
     </div>
 
-    <script src="../../../js/main.js"></script>
-    <script src="../../../js/adminPanel/layout.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/adminPanel/layout.js"></script>
 </body>
 
 </html>
