--- a/view/index.html
+++ b/view/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Header -->
-    <header w3-include-html="header.html" class="-cont-p -bg-dark -text-light"></header>
+    <header w3-include-html="/view/layout/header.html" class="-cont-p -bg-dark -text-light"></header>
 
     <!-- Main -->
     <main>
@@ -72,7 +72,7 @@
         </div>
 
         <!-- Footer -->
-        <footer class="-cont-p" w3-include-html="footer.html"></footer>
+        <footer class="-cont-p" w3-include-html="/view/layout/footer.html"></footer>
     </main>
 
     <!-- JS -->
