--- a/view/adminPanel/admin/airplanes.html
+++ b/view/adminPanel/admin/airplanes.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" type="image" href="../../../img/favicon.png" />
+    <link rel="shortcut icon" type="image" href="/img/favicon.png" />
     <link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css" rel="stylesheet"
         type="text/css" />
-    <link rel="stylesheet" href="../../../css/main.css">
-    <link rel="stylesheet" href="../../../css/adminPanel/layout.css">
-    <link rel="stylesheet" href="../../../css/adminPanel/admin/airplanes.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/adminPanel/layout.css">
+    <link rel="stylesheet" href="/css/adminPanel/admin/airplanes.css">
     <title>لیست هواپیما ها | پنل مدیریت</title>
 </head>
 
 <body>
     <!-- Header -->
-    <header w3-include-html="../layout/header.html"></header>
+    <header w3-include-html="/view/adminPanel/layout/header.html"></header>
     <div class="content">
         <!-- aside -->
-        <aside w3-include-html="../layout/asideAdmin.html" class="sidebar -bg-dark"></aside>
+        <aside w3-include-html="/view/adminPanel/layout/asideAdmin.html" class="sidebar -bg-dark"></aside>
 
         <!-- main -->
         <main>
@@ -30,42 +30,42 @@
                 <div class="-card-body airplanes">
                     <div class="airplane">
                         <a href="#"></a>
-                        <div class="image"><img src="../../../img/airplanes/EP.png" alt="آسمان"></div>
+                        <div class="image"><img src="/img/airplanes/EP.png" alt="آسمان"></div>
                         <h3 class="-f-900 -center">آسمان</h3>
                     </div>
                     <div class="airplane">
                         <a href="#"></a>
-                        <div class="image"><img src="../../../img/airplanes/I3.png" alt="آتا"></div>
+                        <div class="image"><img src="/img/airplanes/I3.png" alt="آتا"></div>
                         <h3 class="-f-900 -center">آتا</h3>
                     </div>
                     <div class="airplane">
                         <a href="#"></a>
-                        <div class="image"><img src="../../../img/airplanes/IV.png" alt="کاسپین"></div>
+                        <div class="image"><img src="/img/airplanes/IV.png" alt="کاسپین"></div>
                         <h3 class="-f-900 -center">کاسپین</h3>
                     </div>
                     <div class="airplane">
                         <a href="#"></a>
-                        <div class="image"><img src="../../../img/airplanes/SA.png" alt="ساها"></div>
+                        <div class="image"><img src="/img/airplanes/SA.png" alt="ساها"></div>
                         <h3 class="-f-900 -center">ساها</h3>
                     </div>
                     <div class="airplane">
                         <a href="#"></a>
-                        <div class="image"><img src="../../../img/airplanes/SR.png" alt="سپهران"></div>
+                        <div class="image"><img src="/img/airplanes/SR.png" alt="سپهران"></div>
                         <h3 class="-f-900 -center">سپهران</h3>
                     </div>
                     <div class="airplane">
                         <a href="#"></a>
-                        <div class="image"><img src="../../../img/airplanes/VR.png" alt="وارش"></div>
+                        <div class="image"><img src="/img/airplanes/VR.png" alt="وارش"></div>
                         <h3 class="-f-900 -center">وارش</h3>
                     </div>
                     <div class="airplane">
                         <a href="#"></a>
-                        <div class="image"><img src="../../../img/airplanes/W5.png" alt="ماهان"></div>
+                        <div class="image"><img src="/img/airplanes/W5.png" alt="ماهان"></div>
                         <h3 class="-f-900 -center">ماهان</h3>
                     </div>
                     <div class="airplane">
                         <a href="http://127.0.0.1:5500/view/adminPanel/admin/iranair.html"></a>
-                        <div class="image"><img src="../../../img/airplanes/IR.png" alt="ایران ایر"></div>
+                        <div class="image"><img src="/img/airplanes/IR.png" alt="ایران ایر"></div>
                         <h3 class="-f-900 -center">ایران ایر</h3>
                     </div>
                 </div>
@@ -73,8 +73,8 @@
         </main>
     </div>
 
-    <script src="../../../js/main.js"></script>
-    <script src="../../../js/adminPanel/layout.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/adminPanel/layout.js"></script>
 </body>
 
 </html>
