--- a/view/adminPanel/admin/iranair.html
+++ b/view/adminPanel/admin/iranair.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" type="image" href="../../../img/favicon.png" />
+    <link rel="shortcut icon" type="image" href="/img/favicon.png" />
     <link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css" rel="stylesheet"
         type="text/css" />
-    <link rel="stylesheet" href="../../../css/main.css">
-    <link rel="stylesheet" href="../../../css/adminPanel/layout.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/adminPanel/layout.css">
     <title>شرکت هواپیمایی ایران ایر | پنل مدیریت</title>
 </head>
 
 <body>
     <!-- Header -->
-    <header w3-include-html="../layout/header.html"></header>
+    <header w3-include-html="/view/adminPanel/layout/header.html"></header>
     <div class="content">
         <!-- aside -->
-        <aside w3-include-html="../layout/asideAdmin.html" class="sidebar -bg-dark"></aside>
+        <aside w3-include-html="/view/adminPanel/layout/asideAdmin.html" class="sidebar -bg-dark"></aside>
 
         <!-- main -->
         <main>
@@ -25,7 +25,7 @@
                 <div class="-card-header">
                     <h3 class="-card-title">شرکت هواپیمایی ایران ایر</h3>
                 </div>
-            
+
                 <div class="-card-body -table-responsive">
                     <table class="-table -table-hover">
                         <tbody>
@@ -81,8 +81,8 @@
         </main>
     </div>
 
-    <script src="../../../js/main.js"></script>
-    <script src="../../../js/adminPanel/layout.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/adminPanel/layout.js"></script>
 </body>
 
 </html>
