--- a/view/index.html
+++ b/view/index.html
@@ -7,8 +7,9 @@
     <link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css" rel="stylesheet"
         type="text/css" />
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/layout/header.css">
+    <link rel="stylesheet" href="/css/layout/footer.css">
+    <link rel="stylesheet" href="/css/layout/auth.css">
     <link rel="stylesheet" href="/css/index.css">
     <title>آژانس هواپیمایی</title>
 </head>
@@ -65,11 +66,133 @@
                     <div class="img"><img src="/img/flying.svg" alt="start"></div>
                     <div>
                         <h3>با آژانس هواپیمایی سفری لذت بخش را تجربه کنید.</h3>
-                        <p>از قسمت بالا اطلاعات سفر خود را وارد کنید و از میان هزاران شرکت هواپیمایی معتبر بلیط خود را خریداری کنید.</p>
+                        <p>از قسمت بالا اطلاعات سفر خود را وارد کنید و از میان هزاران شرکت هواپیمایی معتبر بلیط خود را
+                            خریداری کنید.</p>
                     </div>
                 </div>
+
+                <!-- <div class="trips">
+                    <div class="trip">
+                        <div class="img">
+                            <div><img src="/img/airplanes/IR.png" alt="IR"></div>
+                            <p>ایران ایر</p>
+                        </div>
+                        <div class="od">
+                            <div class="od-cities">
+                                <h3>تهران</h3>
+                                <span class="line"></span>
+                                <h3>بیرجند</h3>
+                            </div>
+
+                            <div class="clock">
+                                <i class="fad fa-clock"></i>
+                                <p><span>ساعت پرواز</span><strong>22:00</strong></p>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <p class="-w-100 -center price"><strong>9,850,000</strong> تومان</p>
+                            <a href="#" class="-w-100 -btn -btn-warning">انتخاب پرواز</a>
+                            <small class="-w-100 -text-danger -center">9 صندلی باقی مانده</small>
+                        </div>
+                    </div>
+                    <div class="trip">
+                        <div class="img">
+                            <div><img src="/img/airplanes/EP.png" alt="EP"></div>
+                            <p>آسمان</p>
+                        </div>
+                        <div class="od">
+                            <div class="od-cities">
+                                <h3>تهران</h3>
+                                <span class="line"></span>
+                                <h3>بیرجند</h3>
+                            </div>
+
+                            <div class="clock">
+                                <i class="fad fa-clock"></i>
+                                <p><span>ساعت پرواز</span><strong>04:00</strong></p>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <p class="-w-100 -center price"><strong>7,800,000</strong> تومان</p>
+                            <a href="#" class="-w-100 -btn -btn-warning">انتخاب پرواز</a>
+                            <small class="-w-100 -text-danger -center">1 صندلی باقی مانده</small>
+                        </div>
+                    </div>
+                    <div class="trip">
+                        <div class="img">
+                            <div><img src="/img/airplanes/I3.png" alt="I3"></div>
+                            <p>آتا</p>
+                        </div>
+                        <div class="od">
+                            <div class="od-cities">
+                                <h3>تهران</h3>
+                                <span class="line"></span>
+                                <h3>بیرجند</h3>
+                            </div>
+
+                            <div class="clock">
+                                <i class="fad fa-clock"></i>
+                                <p><span>ساعت پرواز</span><strong>20:30</strong></p>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <p class="-w-100 -center price"><strong>9,005,000</strong> تومان</p>
+                            <a href="#" class="-w-100 -btn -btn-warning">انتخاب پرواز</a>
+                            <small class="-w-100 -text-danger -center">6 صندلی باقی مانده</small>
+                        </div>
+                    </div>
+                    <div class="trip">
+                        <div class="img">
+                            <div><img src="/img/airplanes/SR.png" alt="SR"></div>
+                            <p>سپهران</p>
+                        </div>
+                        <div class="od">
+                            <div class="od-cities">
+                                <h3>تهران</h3>
+                                <span class="line"></span>
+                                <h3>بیرجند</h3>
+                            </div>
+
+                            <div class="clock">
+                                <i class="fad fa-clock"></i>
+                                <p><span>ساعت پرواز</span><strong>22:00</strong></p>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <p class="-w-100 -center price"><strong>3,850,000</strong> تومان</p>
+                            <a href="#" class="-w-100 -btn -btn-warning">انتخاب پرواز</a>
+                            <small class="-w-100 -text-danger -center">5 صندلی باقی مانده</small>
+                        </div>
+                    </div>
+                    <div class="trip">
+                        <div class="img">
+                            <div><img src="/img/airplanes/W5.png" alt="W5"></div>
+                            <p>ماهان</p>
+                        </div>
+                        <div class="od">
+                            <div class="od-cities">
+                                <h3>تهران</h3>
+                                <span class="line"></span>
+                                <h3>بیرجند</h3>
+                            </div>
+
+                            <div class="clock">
+                                <i class="fad fa-clock"></i>
+                                <p><span>ساعت پرواز</span><strong>22:00</strong></p>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <p class="-w-100 -center price"><strong>9,850,000</strong> تومان</p>
+                            <a href="#" class="-w-100 -btn -btn-warning">انتخاب پرواز</a>
+                            <small class="-w-100 -text-danger -center">9 صندلی باقی مانده</small>
+                        </div>
+                    </div>
+                </div> -->
             </div>
         </div>
+
+        <!-- Auth -->
+        <div w3-include-html="/view/layout/auth.html" id="auth" class="modal"></div>
 
         <!-- Footer -->
         <footer class="-cont-p" w3-include-html="/view/layout/footer.html"></footer>
