--- a/view/layout/header.html
+++ b/view/layout/header.html
@@ -1,10 +1,10 @@
 <div class="header-content">
     <h2 class="logo">آژانس هواپیمایی</h2>
     <ul class="menu">
-        <li><a href="#" class="-text-light">لینک اول</a></li>
-        <li><a href="#" class="-text-light">لینک دوم</a></li>
-        <li><a href="#" class="-text-light">لینک سوم</a></li>
-        <li><a href="#" class="-text-light">لینک چهارم</a></li>
+        <li><a href="http://127.0.0.1:5500/view" class="-text-light">خانه</a></li>
+        <li><a href="javascript:void(0)" class="-text-light">درباره ما</a></li>
+        <li><a href="javascript:void(0)" class="-text-light">قوانین و مقررات</a></li>
+        <li><a href="javascript:void(0)" class="-text-light">تماس با ما</a></li>
     </ul>
 </div>
-<a href="#" class="-btn -btn-light header-auth">ورود به حساب</a>
+<a href="#" class="showModal -btn -btn-light header-auth">ورود به حساب</a>
